--- a/core/templates/includes/header.html
+++ b/core/templates/includes/header.html
@@ -12,7 +12,7 @@
                 </a>
             </li>
             <li class="header__nav-item">
-                <a href="#" class="header__nav-link">
+                <a href="{{url_for('products.index')}}" class="header__nav-link">
                     Products
                 </a>
             </li>
