--- a/core/templates/add.html
+++ b/core/templates/add.html
@@ -10,11 +10,17 @@
 </head>
 <body>
     <form action="" method="POST">
-        <label for="name">Name:</label>
-        <input type="text" name="name" id="name">
+        <label for="title">Title:</label>
+        <input type="text" name="title" id="title">
+        
+        <label for="author">Author:</label>
+        <input type="text" name="author" id="author">
+        
+        <label for="genre">Genre:</label>
+        <input type="text" name="genre" id="genre">
         
         <label for="price">Price:</label>
-        <input type="number" name="price" id="price">
+        <input type="text" name="price" id="price">
 
         <label for="description">Product Description:</label>
         <input type="text" name="description" id="description">
