--- a/core/templates/includes/header.html
+++ b/core/templates/includes/header.html
@@ -7,7 +7,7 @@
     <nav class="header__nav">
         <ul class="header__nav-items">
             <li class="header__nav-item">
-                <a href="#" class="header__nav-link">
+                <a href="{{url_for('main.index')}}" class="header__nav-link">
                     Home
                 </a>
             </li>
