--- a/core/templates/includes/header.html
+++ b/core/templates/includes/header.html
@@ -17,7 +17,7 @@
                 </a>
             </li>
             <li class="header__nav-item">
-                <a href="#" class="header__nav-link">
+                <a href="{{url_for('main.about')}}" class="header__nav-link">
                     About
                 </a>
             </li>
