--- a/core/templates/product_list.html
+++ b/core/templates/product_list.html
@@ -4,6 +4,13 @@
     <main class="main">
         {% include 'includes/genre_list.html' %}
         <section class="main__products">
+            <form action="" class="filter" method="get">
+                <select name="sort" id="sort">
+                    <option value="title">Title</option>
+                    <option value="price">Price</option>
+                </select>
+                <input type="submit">
+            </form>
             {% for record in records %}
             {% include 'includes/product_card.html' %}
         {% endfor %}
