add dynamic product page routes and extra product filters

--- a/core/templates/includes/product_card.html
+++ b/core/templates/includes/product_card.html
@@ -12,6 +12,6 @@
         £{{record.price}}
     </p>
     <div class="view_more">
-        <a>View More</a>
+        <a href="{{url_for('products.product_details', id=record.id)}}">View More</a>
     </div>
 </div>
