--- a/core/static/css/products.css
+++ b/core/static/css/products.css
@@ -45,3 +45,34 @@
     text-decoration: underline;
 }
 
+.filter {
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    padding: 1rem 6rem;
+    border-bottom: 1px solid var(--black);
+}
+
+.filter select {
+    width: 8rem;
+    height: 1.8rem;
+}
+
+.filter option {
+    height: 1rem;
+}
+
+.filter input[type='submit'] {
+    padding: 0 3rem;
+    height: 1.8rem;
+    background-color: var(--main);
+    color: var(--white);
+    cursor: pointer;
+    transition: all 300ms;
+} .filter input[type='submit']:hover {
+    background-color: var(--second);
+}
+
+.product_desc {
+    padding: 1rem;
+}
