--- a/core/templates/product_details.html
+++ b/core/templates/product_details.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block main %}
-<main class="main">
+<main class="product_desc">
     <h1>{{product.title}}</h1>
     <p>{{product.author}}</p>
     <p>{{product.description}}</p>
